@@ -98,6 +98,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #2650: re.escape() no longer escapes the '_'.
+
 - Issue #11757: select.select() now raises ValueError when a negative timeout
   is passed (previously, a select.error with EINVAL would be raised).  Patch
   by Charles-François Natali.
